ekaterina.itsenko/fus-stats
[pycharm] PY-84800 IDE: log jupyter-related help openings

[pycharm] PY-78634 Jupyter: Editor: add stats for DnD

[pycharm] PY-84801 IDE: add stats for csv files size

[pycharm] PY-84803 IDE: extend "file.types.usage: edit" for csv

[pycharm] PY-84804 IDE: extend "file.types.usage: edit"


Merge-request: IJ-MR-182807
Merged-by: Ekaterina Itsenko <ekaterina.itsenko@jetbrains.com>

GitOrigin-RevId: 91cb25d08113dda4b75d11b27b870b5189fe892b