@@ -70,8 +70,10 @@ public class CsvDocumentDataHookUp extends DocumentDataHookUp {
 
     @Override
     protected void finishSession(@NotNull UpdateSession session, boolean success) {
-      if (success && ((CsvUpdateSession)session).myNewFormat != null) {
-         myFormat = ((CsvUpdateSession)session).myNewFormat;
+      if (success) {
+        if (((CsvUpdateSession)session).myNewFormat != null) {
+          myFormat = ((CsvUpdateSession)session).myNewFormat;
+        }
       }
     }
   }
@@ -134,7 +136,7 @@ public class CsvDocumentDataHookUp extends DocumentDataHookUp {
       GridRow row;
       if (named) {
         Object[] values = CsvFormatParser.values(format.dataRecord, sequence, valuesList.subList(1, valuesList.size())).toArray();
-        String name = valuesList.get(0).value(sequence).toString();
+        String name = valuesList.getFirst().value(sequence).toString();
         row = NamedRow.create(i, name, values);
       }
       else {
@@ -400,7 +402,7 @@ public class CsvDocumentDataHookUp extends DocumentDataHookUp {
                               @NotNull CsvRecord headerRecord) {
       List<ValueRange> values = headerRecord.values;
       int valuesStart = values.get(myFormatter.requiresRowNumbers() ? 1 : 0).getStartOffset();
-      int valuesEnd = values.get(values.size() - 1).getEndOffset();
+      int valuesEnd = values.getLast().getEndOffset();
 
       StringBuilder sb = new StringBuilder();
       for (GridColumn column : columns) {
